# vgperf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindVKVG.cmake
src/: main.c  perf-test.h  rnd.c  rnd.h  vgperf.h
src/cairo/: basic_tests.h  common.c  common.h  fill.h  line.h  rect.h  rectangles.h  shapes.c  shapes.h  test1.h  vgperf.h
src/skia/: basic_tests.h  common.c  common.h  shapes.c  shapes.h  vgperf.h
src/vkvg/: basic_tests.h  common.c  common.h  line.h  rect.h  rectangles.h  shapes.c  shapes.h  test1.h  vgperf.h  vkengine.c  vkengine.h
